Font resource 경로 변경

--- a/app/index.html
+++ b/app/index.html
@@ -105,14 +105,12 @@
       <div class="contact-section">
         <div class="col-lg-8 col-lg-offset-2">
           <h2><span class="light">Contact</span> The Whales</h2>
-          <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
           <p>contact@thewhalegames.com</p>
           <ul class="list-inline banner-social-buttons">
-            <li><a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-            </li>
-            <li><a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-            </li>
-            <li><a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+            <li>
+                <a href="https://www.facebook.com/esportsbattle" class="btn btn-default btn-lg">
+                    <i class="fa fa-facebook fa-fw"></i><span class="network-name"> Facebook</span>
+                </a>
             </li>
           </ul>
         </div>
@@ -134,7 +132,7 @@
         e=o.createElement(i);r=o.getElementsByTagName(i)[0];
         e.src='//www.google-analytics.com/analytics.js';
         r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-XXXXX-X');ga('send','pageview');
+        ga('create','UA-50017448-2', 'thewhalegames.com');ga('send','pageview');
     </script>
 
     <!-- build:js scripts/plugins.js -->
