레이아웃 정리

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="The Whale Games">
 
-    <title>더 웨일 게임즈 - Make games more fun</title>
+    <title>더웨일게임즈 - Make games more fun</title>
 
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
@@ -23,6 +23,7 @@
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
+
 
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
@@ -66,11 +67,6 @@
                       <img src="images/ci.png" class="image-responsive" alt=""/>
                         <!--<h1 class="brand-heading">The Whale Games</h1>-->
                         <p>더웨일게임즈는 글로벌 e스포츠 시장을 목표로 다양한 백그라운드의 사람들이 모인 팀입니다. 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼 & 커뮤니티를 만들고 있습니다.</p>
-                        <!--<div class="page-scroll">-->
-                            <!--<a href="#about" class="btn btn-circle">-->
-                                <!--<i class="fa fa-angle-double-down animated"></i>-->
-                            <!--</a>-->
-                        <!--</div>-->
                     </div>
                 </div>
             </div>
@@ -81,7 +77,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="page-header">
-              <h1>eSportsBattle</h1>
+              <h1><a href="http://esportsbattle.com">eSportsBattle</a></h1>
               <p>
                 e스포츠를 즐기는 새로운 방법! 본격 e스포츠 경기 결과 예측 서비스 e스포츠 배틀
                 매일 100명 + 일주일에 100명에게 문화상품권 폭격
@@ -130,7 +126,7 @@
             </div>
             <div class="row">
               <div class="col-lg-12">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At autem culpa eveniet ipsa iusto labore nobis odio perferendis ullam, vitae. Odit optio quas voluptas voluptatum. Et excepturi facere minus nulla?</p>
+                <p>더웨일게임즈의 첫번째 서비스입니다. e스포츠배틀의 전신입니다.</p>
               </div>
             </div>
             <div class="row">
@@ -151,7 +147,7 @@
         </div>
       </div>
       <div class="row container">
-        <div class="col-md-6">
+        <div class="col-md-5">
           <div class="row">
             <h3>개발</h3>
             <p>전세계의 사용자에게 인정받는 소프트웨어를 열정적으로 만들고 싶은 사람</p>
@@ -165,7 +161,7 @@
             <p>모든 새로운 경험들을 디자인의 관점에서 재해석하고 완성도 높은 서비스를 만들어나가기 위한 도전을 하는 사람. 사용자를 즐겁게 하는 아름답고 가치 있는 디자인을 하는 사람</p>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-5 col-md-offset-1">
           <div class="row">
             <h3>모집인원</h3>
             <ul>
@@ -186,28 +182,28 @@
       </div>
     </section>
 
-    <section id="contact" class="contact container content-section text-center">
-      <div class="contact-section">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h2><span class="light">Contact</span> The Whales</h2>
-          <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
-          <ul class="list-inline banner-social-buttons">
-            <li>
-                <a href="https://www.facebook.com/esportsbattle" class="btn btn-default btn-lg">
-                    <i class="fa fa-facebook fa-fw"></i><span class="network-name"> Facebook</span>
-                </a>
-            </li>
-          </ul>
-
-          <a href="#about" class="btn btn-circle">
-            <i class="fa fa-facebook"></i>
-          </a>
-          <a href="#about" class="btn btn-circle">
-            <i class="fa fa-envelope"></i>
-          </a>
-          <a href="#about" class="btn btn-circle">
-            <i class="fa fa-angle-double-down animated"></i>
-          </a>
+    <section id="contact" class="contact">
+      <div class="contact-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+              <h2><span class="light">Contact</span> The Whales</h2>
+              <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
+              <ul class="list-inline banner-social-buttons">
+                <li>
+                  <a href="http://facebook.com/esportsbattle" class="btn btn-circle">
+                    <i class="fa fa-facebook"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="mailto:contact@thewhalegames.com" class="btn btn-circle">
+                    <i class="fa fa-envelope"></i>
+                  </a>
+                </li>
+              </ul>
+              <address>서울 서초구 남부순환로 289길 5 삼영빌딩 1층 101호</address>
+            </div>
+          </div>
         </div>
       </div>
     </section>
