--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <title>더웨일게임즈 - Make games more fun</title>
 
     <meta name="viewport" content="width=device-width">
+    <link rel="author" href="humans.txt">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
