트위터, 패북용 메타 태그 추가

--- a/app/index.html
+++ b/app/index.html
@@ -2,253 +2,261 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="The Whale Games">
+  <meta charset="utf-8">
 
-    <title>더웨일게임즈 - Make games more fun</title>
+  <title>더웨일게임즈 - We Make Games More Fun</title>
+  <meta name="description" content="We Make Games More Fun 더웨일게임즈입니다.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="viewport" content="width=device-width">
-    <link rel="author" href="humans.txt">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
+  <meta name="author" content="The Whale Games">
+  <link rel="author" href="humans.txt">
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" value="We Make Games More Fun 더웨일게임즈">
+
+  <!-- Open Graph data -->
+  <meta property="og:title" content="We Make Games More Fun 더웨일게임즈" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://thewhalegames.com/" />
+  <meta property="og:description" content="We Make Games More Fun 더웨일게임즈입니다." />
+
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <!-- build:css styles/vendor.css -->
+  <!-- bower:css -->
+  <!-- endbower -->
+  <!-- endbuild -->
+  <!-- build:css(.tmp) styles/main.css -->
+  <link rel="stylesheet" href="styles/main.css">
+  <!-- endbuild -->
 
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 
 
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand" href="#page-top">
-                    <span class="light">The Whale Games</span>
-                </a>
-            </div>
+<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header page-scroll">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+        <i class="fa fa-bars"></i>
+      </button>
+      <a class="navbar-brand" href="#page-top">
+        <span class="light">The Whale Games</span>
+      </a>
+    </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="page-scroll">
-                        <a href="#about">Home</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#service">Service</a>
-                    </li>
-                    <li class="page-scroll">
-                      <a href="#recruit">Recruit</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+      <ul class="nav navbar-nav">
+        <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+        <li class="page-scroll">
+          <a href="#about">Home</a>
+        </li>
+        <li class="page-scroll">
+          <a href="#service">Service</a>
+        </li>
+        <li class="page-scroll">
+          <a href="#recruit">Recruit</a>
+        </li>
+        <li class="page-scroll">
+          <a href="#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container -->
+</nav>
 
-    <section id="about" class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                      <img src="images/ci.png" class="image-responsive" alt=""/>
-                        <!--<h1 class="brand-heading">The Whale Games</h1>-->
-                        <p>더웨일게임즈는 글로벌 e스포츠 시장을 목표로 다양한 백그라운드의 사람들이 모인 팀입니다. 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼 & 커뮤니티를 만들고 있습니다.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="service" class="container content-section">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="page-header">
-              <h1><a href="http://esportsbattle.com">eSportsBattle</a></h1>
-              <p>
-                e스포츠를 즐기는 새로운 방법! 본격 e스포츠 경기 결과 예측 서비스 e스포츠 배틀
-                매일 100명 + 일주일에 100명에게 문화상품권 폭격
-              </p>
-            </div>
-            <div class="row">
-              <div class="col-lg-4">
-                <img src="images/phone_esportsbattle.png" class="img-responsive" alt=""/>
-              </div>
-              <div class="col-lg-8">
-                <p>
-                  매일 전 세계에서 벌어지는 e스포츠 경기의 승부를 예측하면서 회원끼리 포인트 경쟁을 펼쳐보세요
-                </p>
-                <p>
-                  광고보기, 커뮤니티 활동 등을 통해 포인트를 모으고 경기 결과를 예측하고 포인트 배틀을 벌이세요. 푸짐한 금액의 문화상품권이 지급됩니다.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="page-header">
-              <h1>NEXON G-STAR</h1>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <p>더웨일게임즈는 G-STAR 2013에 참가하였습니다.
-                2013년 11월 14일부터 17일까지 열린 국제게임박람회 G-STAR 2013에서 더웨일게임즈는 G-STAR 정식 앱 "응답하라 넥슨 지스타"를 만들어 서비스했습니다.</p>
-                <p>이 앱에는 더웨일게임즈가 핵심으로 삼고 있는 베팅 시스템이 포함되어 있으며, 넥슨 인비테이셔널 슈퍼매치에 시스템이 적용되어 4일동안 6,000여명의 인원들이 가입하여 배팅과 퀴즈를 즐겼습니다.</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <img src="images/phone_nexongstar.png" class="img-responsive" alt=""/>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="page-header">
-              <h1>BET LOL</h1>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <p>더웨일게임즈의 첫번째 서비스입니다. e스포츠배틀의 전신입니다.</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <img src="images/phone_betlol.png" class="img-responsive" alt=""/>
-              </div>
-            </div>
-          </div>
-        </div>
-
-    </section>
-
-    <section id="recruit" class="container content-section">
-      <div class="row container">
-        <div class="page-header">
-          <h1>Recruit</h1>
-          <p>더웨일게임즈와 함께 할 인재를 기다리고 있습니다.</p>
+<section id="about" class="intro">
+  <div class="intro-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <img src="images/ci.png" class="image-responsive" alt=""/>
+          <!--<h1 class="brand-heading">The Whale Games</h1>-->
+          <p>더웨일게임즈는 글로벌 e스포츠 시장을 목표로 다양한 백그라운드의 사람들이 모인 팀입니다. 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼 & 커뮤니티를 만들고 있습니다.</p>
         </div>
       </div>
-      <div class="row container">
-        <div class="col-md-5">
-          <div class="row">
-            <h3>개발</h3>
-            <p>전세계의 사용자에게 인정받는 소프트웨어를 열정적으로 만들고 싶은 사람</p>
-          </div>
-          <div class="row">
-            <h3>기획운영</h3>
-            <p>언제나 이용자의 목소리에 귀기울일 줄 아는 사람 작은 스마트폰 안에서 70억의 사람들이 행복하게 즐길 수 있는 앱을 만들고 싶은 사람</p>
-          </div>
-          <div class="row">
-            <h3>디자인</h3>
-            <p>모든 새로운 경험들을 디자인의 관점에서 재해석하고 완성도 높은 서비스를 만들어나가기 위한 도전을 하는 사람. 사용자를 즐겁게 하는 아름답고 가치 있는 디자인을 하는 사람</p>
-          </div>
-        </div>
-        <div class="col-md-5 col-md-offset-1">
-          <div class="row">
-            <h3>모집인원</h3>
-            <ul>
-              <li>개발 : 상시모집</li>
-              <li>기획운영 : 상시모집</li>
-              <li>디자인 : 상시모집</li>
-            </ul>
-          </div>
-          <div class="row">
-            <h3>지원방법</h3>
-            <p>
-              recruit@thewhalegames.com
-              이력서, 자기소개서, 포트폴리오
-            </p>
-          </div>
+    </div>
+  </div>
+</section>
 
+<section id="service" class="container content-section">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="page-header">
+        <h1><a href="http://esportsbattle.com">eSportsBattle</a></h1>
+        <p>
+          e스포츠를 즐기는 새로운 방법! 본격 e스포츠 경기 결과 예측 서비스 e스포츠 배틀
+          매일 100명 + 일주일에 100명에게 문화상품권 폭격
+        </p>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <img src="images/phone_esportsbattle.png" class="img-responsive" alt=""/>
+        </div>
+        <div class="col-lg-8">
+          <p>
+            매일 전 세계에서 벌어지는 e스포츠 경기의 승부를 예측하면서 회원끼리 포인트 경쟁을 펼쳐보세요
+          </p>
+          <p>
+            광고보기, 커뮤니티 활동 등을 통해 포인트를 모으고 경기 결과를 예측하고 포인트 배틀을 벌이세요. 푸짐한 금액의 문화상품권이 지급됩니다.
+          </p>
         </div>
       </div>
-    </section>
+    </div>
+  </div>
 
-    <section id="contact" class="contact">
-      <div class="contact-body">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-              <h2><span class="light">Contact</span> The Whales</h2>
-              <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
-              <ul class="list-inline banner-social-buttons">
-                <li>
-                  <a href="http://facebook.com/esportsbattle" class="btn btn-circle">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="mailto:contact@thewhalegames.com" class="btn btn-circle">
-                    <i class="fa fa-envelope"></i>
-                  </a>
-                </li>
-              </ul>
-              <address>서울 서초구 남부순환로 289길 5 삼영빌딩 1층 101호</address>
-            </div>
-          </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="page-header">
+        <h1>NEXON G-STAR</h1>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <p>더웨일게임즈는 G-STAR 2013에 참가하였습니다.
+            2013년 11월 14일부터 17일까지 열린 국제게임박람회 G-STAR 2013에서 더웨일게임즈는 G-STAR 정식 앱 "응답하라 넥슨 지스타"를 만들어 서비스했습니다.</p>
+          <p>이 앱에는 더웨일게임즈가 핵심으로 삼고 있는 베팅 시스템이 포함되어 있으며, 넥슨 인비테이셔널 슈퍼매치에 시스템이 적용되어 4일동안 6,000여명의 인원들이 가입하여 배팅과 퀴즈를 즐겼습니다.</p>
         </div>
       </div>
-    </section>
+      <div class="row">
+        <div class="col-lg-12">
+          <img src="images/phone_nexongstar.png" class="img-responsive" alt=""/>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="page-header">
+        <h1>BET LOL</h1>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <p>더웨일게임즈의 첫번째 서비스입니다. e스포츠배틀의 전신입니다.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <img src="images/phone_betlol.png" class="img-responsive" alt=""/>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <!--<script>-->
-        <!--(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=-->
-        <!--function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;-->
-        <!--e=o.createElement(i);r=o.getElementsByTagName(i)[0];-->
-        <!--e.src='//www.google-analytics.com/analytics.js';-->
-        <!--r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));-->
-        <!--ga('create','UA-50017448-2', 'thewhalegames.com');ga('send','pageview');-->
-    <!--</script>-->
+</section>
 
-    <!-- build:js scripts/plugins.js -->
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
-    <script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
-    <!-- endbuild -->
+<section id="recruit" class="container content-section">
+  <div class="row container">
+    <div class="page-header">
+      <h1>Recruit</h1>
+      <p>더웨일게임즈와 함께 할 인재를 기다리고 있습니다.</p>
+    </div>
+  </div>
+  <div class="row container">
+    <div class="col-md-5">
+      <div class="row">
+        <h3>개발</h3>
+        <p>전세계의 사용자에게 인정받는 소프트웨어를 열정적으로 만들고 싶은 사람</p>
+      </div>
+      <div class="row">
+        <h3>기획운영</h3>
+        <p>언제나 이용자의 목소리에 귀기울일 줄 아는 사람 작은 스마트폰 안에서 70억의 사람들이 행복하게 즐길 수 있는 앱을 만들고 싶은 사람</p>
+      </div>
+      <div class="row">
+        <h3>디자인</h3>
+        <p>모든 새로운 경험들을 디자인의 관점에서 재해석하고 완성도 높은 서비스를 만들어나가기 위한 도전을 하는 사람. 사용자를 즐겁게 하는 아름답고 가치 있는 디자인을 하는 사람</p>
+      </div>
+    </div>
+    <div class="col-md-5 col-md-offset-1">
+      <div class="row">
+        <h3>모집인원</h3>
+        <ul>
+          <li>개발 : 상시모집</li>
+          <li>기획운영 : 상시모집</li>
+          <li>디자인 : 상시모집</li>
+        </ul>
+      </div>
+      <div class="row">
+        <h3>지원방법</h3>
+        <p>
+          recruit@thewhalegames.com
+          이력서, 자기소개서, 포트폴리오
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<section id="contact" class="contact">
+  <div class="contact-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <h2><span class="light">Contact</span> The Whales</h2>
+          <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
+          <ul class="list-inline banner-social-buttons">
+            <li>
+              <a href="http://facebook.com/esportsbattle" class="btn btn-circle">
+                <i class="fa fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a href="mailto:contact@thewhalegames.com" class="btn btn-circle">
+                <i class="fa fa-envelope"></i>
+              </a>
+            </li>
+          </ul>
+          <address>서울 서초구 남부순환로 289길 5 삼영빌딩 1층 101호</address>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- build:js scripts/vendor.js -->
+<!-- bower:js -->
+<script src="../bower_components/jquery/dist/jquery.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
+
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<!--<script>-->
+<!--(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=-->
+<!--function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;-->
+<!--e=o.createElement(i);r=o.getElementsByTagName(i)[0];-->
+<!--e.src='//www.google-analytics.com/analytics.js';-->
+<!--r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));-->
+<!--ga('create','UA-50017448-2', 'thewhalegames.com');ga('send','pageview');-->
+<!--</script>-->
+
+<!-- build:js scripts/plugins.js -->
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
+<script src="../bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
+<!-- endbuild -->
 
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <!-- Google Maps API Key - You will need to use your own API key to use the map feature -->
-    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>-->
+<!-- Google Maps API Key - You will need to use your own API key to use the map feature -->
+<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>-->
 
-    <!-- build:js({app,.tmp}) scripts/main.js -->
-    <script src="scripts/main.js"></script>
-    <!-- endbuild -->
+<!-- build:js({app,.tmp}) scripts/main.js -->
+<script src="scripts/main.js"></script>
+<!-- endbuild -->
 
 </body>
 
