CI 큰 이미지로 변경, intro 레이아웃 조정

--- a/app/index.html
+++ b/app/index.html
@@ -72,10 +72,14 @@
   <div class="intro-body">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <img src="images/ci.png" class="image-responsive" alt=""/>
-          <!--<h1 class="brand-heading">The Whale Games</h1>-->
-          <p>더웨일게임즈는 글로벌 e스포츠 시장을 목표로 다양한 백그라운드의 사람들이 모인 팀입니다. 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼 & 커뮤니티를 만들고 있습니다.</p>
+        <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1">
+          <div class="row ci">
+            <img src="images/ci.png" class="img-responsive" alt="The Whale Games CI"/>
+            <h1>We Make Games More Fun</h1>
+          </div>
+          <div class="row">
+            <p>더웨일게임즈는 글로벌 e스포츠 시장을 목표로 다양한 백그라운드의 사람들이 모인 팀입니다. 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼 & 커뮤니티를 만들고 있습니다.</p>
+          </div>
         </div>
       </div>
     </div>
