--- a/app/index.html
+++ b/app/index.html
@@ -86,11 +86,12 @@
   </div>
 </section>
 
-<section id="service" class="container content-section">
+<section id="service" class="container">
   <div class="row">
     <div class="col-lg-12">
+      <h1>Service</h1>
       <div class="page-header">
-        <h1><a href="http://esportsbattle.com">eSportsBattle</a></h1>
+        <h2><a href="http://esportsbattle.com">eSportsBattle</a></h2>
         <p>
           e스포츠를 즐기는 새로운 방법! 본격 e스포츠 경기 결과 예측 서비스 e스포츠 배틀
           매일 100명 + 일주일에 100명에게 문화상품권 폭격
@@ -115,7 +116,7 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="page-header">
-        <h1>NEXON G-STAR</h1>
+        <h2>NEXON G-STAR</h2>
       </div>
       <div class="row">
         <div class="col-lg-12">
@@ -135,7 +136,7 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="page-header">
-        <h1>BET LOL</h1>
+        <h2>BET LOL</h2>
       </div>
       <div class="row">
         <div class="col-lg-12">
@@ -152,11 +153,10 @@
 
 </section>
 
-<section id="recruit" class="container content-section">
+<section id="recruit" class="container">
   <div class="row container">
     <div class="page-header">
-      <h1>Recruit</h1>
-      <p>더웨일게임즈와 함께 할 인재를 기다리고 있습니다.</p>
+      <h1>Recruit <small>더웨일게임즈와 함께 할 인재를 기다리고 있습니다.</small></h1>
     </div>
   </div>
   <div class="row container">
@@ -200,7 +200,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h2><span class="light">Contact</span> The Whales</h2>
+          <h2>Contact The Whales</h2>
           <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
           <ul class="list-inline banner-social-buttons">
             <li>
