--- a/app/index.html
+++ b/app/index.html
@@ -69,15 +69,14 @@
 </nav>
 
 <section id="about" class="intro">
-  <div class="intro-body">
+  <div class="intro-body" data-scroll-reveal>
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1">
+        <div class="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
           <div class="row ci">
             <img src="images/ci.png" class="img-responsive" alt="The Whale Games CI"/>
-            <h1>We Make Games More Fun</h1>
           </div>
-          <div class="row">
+          <div class="row ci-intro">
             <p>더웨일게임즈는 글로벌 e스포츠 시장을 목표로 다양한 백그라운드의 사람들이 모인 팀입니다. 게임, e스포츠, 글로벌에 대한 열정을 바탕으로 세계적인 e스포츠 플랫폼 & 커뮤니티를 만들고 있습니다.</p>
           </div>
         </div>
@@ -86,17 +85,20 @@
   </div>
 </section>
 
-<section id="service" class="container">
+<section id="service" class="container content-section">
+  <div class="row container">
+    <div class="page-header">
+      <h1>Service <small>더웨일게임즈는 만들고 있습니다.</small></h1>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-lg-12">
-      <h1>Service</h1>
-      <div class="page-header">
         <h2><a href="http://esportsbattle.com">eSportsBattle</a></h2>
         <p>
           e스포츠를 즐기는 새로운 방법! 본격 e스포츠 경기 결과 예측 서비스 e스포츠 배틀
           매일 100명 + 일주일에 100명에게 문화상품권 폭격
         </p>
-      </div>
       <div class="row">
         <div class="col-lg-4">
           <img src="images/phone_esportsbattle.png" class="img-responsive" alt=""/>
@@ -115,9 +117,7 @@
 
   <div class="row">
     <div class="col-lg-12">
-      <div class="page-header">
-        <h2>NEXON G-STAR</h2>
-      </div>
+      <h2>NEXON G-STAR</h2>
       <div class="row">
         <div class="col-lg-12">
           <p>더웨일게임즈는 G-STAR 2013에 참가하였습니다.
@@ -135,9 +135,7 @@
 
   <div class="row">
     <div class="col-lg-12">
-      <div class="page-header">
-        <h2>BET LOL</h2>
-      </div>
+      <h2>BET LOL</h2>
       <div class="row">
         <div class="col-lg-12">
           <p>더웨일게임즈의 첫번째 서비스입니다. e스포츠배틀의 전신입니다.</p>
@@ -153,10 +151,10 @@
 
 </section>
 
-<section id="recruit" class="container">
+<section id="recruit" class="container content-section">
   <div class="row container">
     <div class="page-header">
-      <h1>Recruit <small>더웨일게임즈와 함께 할 인재를 기다리고 있습니다.</small></h1>
+      <h1>Recruit <br><small>더웨일게임즈와 함께 할 인재를 기다리고 있습니다.</small></h1>
     </div>
   </div>
   <div class="row container">
@@ -175,33 +173,33 @@
       </div>
     </div>
     <div class="col-md-5 col-md-offset-1">
-      <div class="row">
+<!--       <div class="row">
         <h3>모집인원</h3>
         <ul>
           <li>개발 : 상시모집</li>
           <li>기획운영 : 상시모집</li>
           <li>디자인 : 상시모집</li>
         </ul>
-      </div>
+      </div> -->
       <div class="row">
         <h3>지원방법</h3>
         <p>
-          recruit@thewhalegames.com
+          recruit@thewhalegames.com<br>
           이력서, 자기소개서, 포트폴리오
         </p>
       </div>
-
     </div>
   </div>
 </section>
 
 <section id="contact" class="contact">
-  <div class="contact-body">
+  <div class="contact-body" data-scroll-reveal="ease-in-out 100px">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h2>Contact The Whales</h2>
           <p>이스포츠배틀 홈페이지, 페이스북을 통해 The Whale Games를 만나보세요.</p>
+
           <ul class="list-inline banner-social-buttons">
             <li>
               <a href="http://facebook.com/esportsbattle" class="btn btn-circle">
@@ -214,16 +212,22 @@
               </a>
             </li>
           </ul>
-          <address>서울 서초구 남부순환로 289길 5 삼영빌딩 1층 101호</address>
+
         </div>
       </div>
     </div>
   </div>
 </section>
 
+<footer class="container">
+  <strong class="text-left">The Whale Games</strong>
+  <address class="text-right">서울 서초구 남부순환로 289길 5 삼영빌딩 1층 101호</address>
+</footer>
+
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
 <script src="../bower_components/jquery/dist/jquery.js"></script>
+<script src="../bower_components/scrollReveal.js/scrollReveal.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -261,7 +265,9 @@
 <!-- build:js({app,.tmp}) scripts/main.js -->
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
-
+<script>
+  window.scrollReveal = new scrollReveal();
+</script>
 </body>
 
 </html>
